cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_313.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/des_enc.c:295: error: DEAD_STORE
  The value written to &tin0 (type unsigned int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/des_enc.c:295:5: Write of unused value
293.           l2c(xor1, iv);
294.       }
295.       tin0 = tin1 = tout0 = tout1 = xor0 = xor1 = 0;
           ^
296.       tin[0] = tin[1] = 0;
297.   }
